# algo-sync

./: Makefile  README.md  wxt.config.ts
.github/workflows/: CI.yml
frontend/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  wxt.config.ts
frontend/src/actions/users/: authenticate.ts
frontend/src/components/: voice-recorder.tsx  voice.tsx
frontend/src/entrypoints/: background.ts  content.ts  injected.ts
frontend/src/entrypoints/oauth/: index.html  main.ts
frontend/src/entrypoints/options/: App.tsx
frontend/src/entrypoints/popup/: App.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: auth.ts  constants.ts  errors.ts  github.ts  inject.ts  llm.ts  speech.ts  utils.ts
frontend/src/lib/types/: audio.ts  auth.ts  languages.ts
frontend/src/locales/: en.yml
frontend/src/types/: auth.ts  languages.ts
frontend/src/types/actions/users/: authenticate.ts
frontend/src/utils/: auth.ts
server/: .env.example  README.md  pyproject.toml
server/app/: __init__.py  constants.py
server/app/api/: main.py
server/app/api/routers/: v1.py
server/app/controllers/: users.py
server/app/models/: users.py
server/app/services/: __init__.py  redis.py  users.py
src/entrypoints/: background.ts  content.ts
src/entrypoints/options/: App.tsx
src/lib/: constants.ts
src/types/: auth.ts
src/utils/: auth.ts
